# learn-rust-helper

./: .gitignore  Cargo.toml  README.md  campaign.toml  flake.nix
.cargo/: config.toml
.direnv/: flake-profile-8094edc35ffd159b09f363f5f11a23109874890c  flake-profile-8094edc35ffd159b09f363f5f11a23109874890c.rc
.direnv/flake-inputs/: 4gi6i3zx2p0phw5klwhy1h4fh36kp0lh-source  a4rqcv884kfbm3aw6xq53581z5yzqh8j-source  lx1vwdl6cdlln4n15aayjn67nrj7bydi-source
.squad/: .first-run  config.json  decisions.md  routing.md  team.md
.squad/agents/Rai/: history.md
.squad/agents/brand/: charter.md  history.md
.squad/agents/data/: charter.md  history.md
.squad/agents/fact-checker/: charter.md  history.md
.squad/agents/mikey/: charter.md  history.md
.squad/agents/mouth/: charter.md  history.md
.squad/agents/ralph/: charter.md  history.md
.squad/agents/scribe/: history.md
.squad/casting/: history.json  registry.json
.squad/identity/: now.md  wisdom.md
.squad/memory/: audit.jsonl  index.json
.squad/memory/policy-inbox/: mikey-file-ownership-policy-c2e79657.md
exercises/world-04-deep-signal/ex22-deep-signal-capstone/: Cargo.toml  README.md
exercises/world-04-deep-signal/ex22-deep-signal-capstone/hints/: hint1.md  hint2.md  hint3.md  solution.rs
exercises/world-04-deep-signal/ex22-deep-signal-capstone/src/: lib.rs
exercises/world-04-deep-signal/ex22-deep-signal-capstone/tests/: solve.rs
exercises/world-05-deep-signal/ex23-async-handshake/: Cargo.toml  README.md
exercises/world-05-deep-signal/ex23-async-handshake/hints/: hint1.md  hint2.md  hint3.md  solution.rs
exercises/world-05-deep-signal/ex23-async-handshake/src/: lib.rs
exercises/world-05-deep-signal/ex23-async-handshake/tests/: solve.rs
exercises/world-06-archive-core/ex34-archive-capstone/: Cargo.toml  README.md
exercises/world-06-archive-core/ex34-archive-capstone/hints/: hint2.md  hint3.md
exercises/world-06-archive-core/ex34-archive-capstone/src/: lib.rs
exercises/world-06-archive-core/ex34-archive-capstone/tests/: solve.rs
scripts/: validate-solutions.sh
xtask/: Cargo.toml
xtask/src/: lib.rs  main.rs
xtask/tests/: cli.rs  exercise_markers.rs  solution_completeness.rs
(+340 files in other folders)
