[workspace]
resolver = "2"
members = [
  "xtask",
  "exercises/*/ex[0-9][0-9]-[a-z]*",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
clap = { version = "4.5.11", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.8"
