[package]
name = "ex22-deep-signal-capstone"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
wiremock = "0.6"
