[package]
name = "ex23-async-handshake"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
tokio.workspace = true

[dev-dependencies]
wiremock = "0.6"
