[package]
name = "ex34-archive-capstone"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
wiremock = "0.6"
